--- a/style.css
+++ b/style.css
@@ -202,3 +202,12 @@ footer {
   height: 400px;
 }
 
+#particles-js {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  top: 0;
+  left: 0;
+  background: #fff8f2;
+}
